--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h3 class="heading">AI Assistant Setup</h3>
+        <h3 class="heading">AZ AI Assistant Setup</h3>
         <p class="subheading">Enter your API key below to get started:</p>
         <div class="key-handler">
             <input type="text" placeholder="Enter your API Key">
