popup changed a bit

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h3 class="heading">AZ AI Assistant Setup</h3>
-        <p class="subheading">Enter your API key below to get started:</p>
+        <p class="subheading">Enter your Grog API key below to get started:</p>
         <div class="key-handler">
             <input type="text" placeholder="Enter your API Key">
             <button>Save API Key</button>
